--- a/.github/workflows/pre-commits.yaml
+++ b/.github/workflows/pre-commits.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: setup environment
         uses: actions/setup-python@v2
         with:
-          python-version: "3.8.10"
+          python-version: "3.9.x"
       
       - id: file_changes
         name: changed files
